funker fortsatt ikke :(